--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-html-parser": "^2.0.2",
     "react-scripts": "1.1.4",
     "recompose": "^0.28.2"
   },
