--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "recompose": "^0.28.2",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
