--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-html-parser": "^2.0.2",
+    "react-loader": "^2.4.5",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "recompose": "^0.28.2",
